feat(TCOMP-1924): add Java 9+ profile