@@ -1068,7 +1068,6 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin><!--  mvn ossindex:audit -->
         <groupId>org.sonatype.ossindex.maven</groupId>
         <artifactId>ossindex-maven-plugin</artifactId>
@@ -1242,7 +1241,7 @@
           </systemPropertyVariables>
           <!-- <forkCount>1</forkCount> --> <!-- never use 0, it affects too much test behavior to be accurate -->
           <trimStackTrace>false</trimStackTrace>
-          <argLine>${argLine}</argLine>
+          <argLine>${argLine} ${extraJvmFlags}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -1252,7 +1251,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <trimStackTrace>false</trimStackTrace>
-          <argLine>${argLine}</argLine>
+          <argLine>${argLine} ${extraJvmFlags}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -1654,6 +1653,30 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <extraJvmFlags>
+          --add-modules=ALL-SYSTEM
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.net=ALL-UNNAMED
+          --add-opens java.base/java.nio=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+          --add-opens java.base/sun.security.action=ALL-UNNAMED
+          --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+        </extraJvmFlags>
+      </properties>
     </profile>
   </profiles>
 </project>
